--- a/src/components/1Navigation/Nav.css
+++ b/src/components/1Navigation/Nav.css
@@ -12,7 +12,7 @@
     margin-top: 5px !important;
 }
 .nav-link{
-    border-bottom: 2px solid black !important;
+    border-bottom: 2px solid #212529 !important;
     
 }
 .nav-link:hover{
