--- a/src/components/3About/About.css
+++ b/src/components/3About/About.css
@@ -1,10 +1,14 @@
 .img-fluid {
-     max-width: 320px !important;
+  /*    max-width: 320px !important;
     height: 320px !important; 
-    border-radius: 50% !important;
-    border: 5px solid yellow !important;
-    padding: 5px !important;
+    
+    padding: 5px !important; */
 }
 #about-container-para{
     line-height: 40px !important;
+}
+.img{
+    width: 50%;
+    border: 4px solid yellow !important;
+    border-radius: 10px;
 }
